<resources>

    <!-- AUTH STRINGS -->
    <string name="web_client_id"> 81680596990-liak4jjs298vkcm832aoap2m52g9bn5p.apps.googleusercontent.com </string>

    <string name="app_name">BookMyTurf</string>
    <string name="title_activity_football">Football</string>
    <string name="facebook_app_id">168888936886354</string>
    <string name="fb_login_protocol_scheme">fb168888936886354</string>
    <string name="facebook_client_token">489cb49f220fbf11f61280f8e2f6da23</string>
    <string name="title_activity_badminton">Badminton</string>
    <string name="title_activity_table_tennis">Table Tennis</string>
    <string name="passwordTagText">Password</string>
    <string name="CreateAccountButtonText">SIGN UP</string>
    <string name="LoginButtonText">SIGN IN</string>
    <string name="nameTagText">Full Name</string>
    <string name="emailTagText">Email</string>
    <string name="reenterPasswordTagText">Re-Enter Password</string>
    <string name="auth_failed">Failed authentication</string>
    <string name="sign_in_below">SIGN IN BELOW</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="nav_other">Other</string>
    <string name="app_title">BOOKMYSTUFF</string>
    <string name="lobbyViewStdText">Tap to allow users to join this slot</string>
    <string name="manager_mode">Manager</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Settings</item>
        <item>Football</item>
        <item>Badminton</item>
        <item>Table Tennis</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_world">Hello World</string>
    <string name="send_message">Send Message</string>
    <string name="enter_lobby_name">Enter Lobby Name</string>
    <string name="logout">Logout</string>
    <string name="title_activity_user_edit">Edit Profile</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password_text">Forgot username or password...</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="say_something">Say something...</string>
    <string name="string_delete_lobby">Delete lobby</string>
    <string name="string_view_members">View members</string>
    <string name="string_share_lobby">Share lobby</string>
    <string name="string_view_turf_information">Turf information</string>
    <string name="string_browse_turfs">Click here to browse turfs</string>
    <string name="title_action_list">Actions</string>
    <string name="title_action_detail">Action Detail</string>
</resources>
