<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/nav_home"/>
        <item android:title="@string/nav_settings"
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings_black_24dp"
            />
        <item android:id="@+id/nav_football"
            android:icon="@drawable/ic_football"
            android:title="@string/title_activity_football"/>
        <item android:id="@+id/nav_badminton"
            android:icon="@drawable/ic_badminton"
            android:title="@string/title_activity_badminton"/>
        <item android:id="@+id/nav_table_tennis"
            android:icon="@drawable/ic_table_tennis"
            android:title="@string/title_activity_table_tennis" />
    </group>
    <item android:title="@string/nav_other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>
</menu>