<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_weight="1"

        android:id="@+id/sportSelectorRadioGroup">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_football"
            android:layout_weight="1"
            android:textSize="12sp"
            android:id="@+id/footballRadioButton"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_badminton"
            android:layout_weight="1"
            android:textSize="12sp"
            android:id="@+id/badmintonRadioButton"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_table_tennis"
            android:layout_weight="1"
            android:textSize="12sp"
            android:id="@+id/tabletennisRadioButton"/>
    </RadioGroup>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/lobbyNameEditText"
        android:hint="@string/enter_lobby_name"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Cancel"
            android:id="@+id/cancelLobbyButton"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Confirm"
            android:id="@+id/confirmLobbyButton"/>
    </LinearLayout>


</LinearLayout>