<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:weightSum="4"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/baloon_dim"
                android:layout_height="@dimen/baloon_dim"
                android:layout_gravity="center"
                android:elevation="5dp"
                app:srcCompat="@mipmap/baloon" />

            <TextView
                android:id="@+id/signInBelowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="10dp"
                android:text="@string/sign_in_below"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/colorAccent">

            <AutoCompleteTextView
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/emailTagText"
                android:inputType="textEmailAddress"
                android:shadowColor="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textColorHint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordTagText"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/LoginButtonText"
            android:textColor="@color/colorPrimaryLight" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:text="@string/forgot_password_text"
            android:textColor="@color/colorAccent"
            android:textSize="10sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleSignInButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textAllCaps="false" />

        <com.facebook.login.widget.DeviceLoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
            android:id="@+id/facebookLoginButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            facebook:com_facebook_login_text="Login" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/CreateAccountButtonText"
            android:textColor="@color/colorPrimaryLight" />
    </LinearLayout>

</ScrollView>